fix: consume all system config event